fix line breaks in descriptions

--- a/src/containers/ListingPage/ListingPage.scss
+++ b/src/containers/ListingPage/ListingPage.scss
@@ -507,15 +507,10 @@
 
 .description {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
 
   /* Preserve newlines, but collapse other whitespace */
   white-space: pre-line;
-
-  @media (--viewportMedium) {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
 }
 
 .sectionMap {
